# mcp-client-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py  setup.sh
src/mcp_client/: client.py
