[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-client-python"
version = "1.0.0"
description = "A flexible Python client for the Model Context Protocol (MCP)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Aneesh Puttur", email = "aneeshkp@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mcp-client = "mcp_client.cli:main"

[project.urls]
Homepage = "https://github.com/aneeshkp/mcp-client-python"
"Bug Tracker" = "https://github.com/aneeshkp/mcp-client-python/issues"
Documentation = "https://github.com/aneeshkp/mcp-client-python/blob/main/docs/usage.md"
Repository = "https://github.com/aneeshkp/mcp-client-python.git"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
